# bazel_mockery

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  gomockery.bzl  gomockery_test.bzl  stringer.bzl
src/: BUILD.bazel  main.go
src/testgo/: BUILD.bazel  interface.go  interface_test.go
