load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:gomockery.bzl", "go_mockery")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "testgo",
    srcs = ["interface.go"],
    importpath = "src/testgo",
    visibility = ["//visibility:public"],
)

# gazelle:resolve go testgo/mocks //src/testgo:mock_lib
go_mockery(
    name = "mock_lib",
    src = ":testgo",
    importpath = "testgo/mocks",
    interfaces = [
        "Stringy",
        "privateStringy",
    ],
)

go_test(
    name = "testgo_test",
    srcs = ["interface_test.go"],
    deps = [
        "//src/testgo:mock_lib",
        "@com_github_stretchr_testify//mock",
    ],
)
